Fixed missin default properties

--- a/name-service/src/main/resources/application.properties
+++ b/name-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+jaeger.reporter.endpoint=
+
 # disable all management enpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
