--- a/greetings-service/src/main/resources/application.properties
+++ b/greetings-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 nameService.host=localhost
 nameService.port=8081
 
+jaeger.reporter.endpoint=
+
 # disable all management enpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
