--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,7 @@
         <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
         <camel.version>2.21.2</camel.version>
 
-        <!-- versions of Maven plugins -->
-        <fmp.version>3.5.40</fmp.version>
+        <fuse.bom.version>7.1.0.fuse-710019-redhat-00002</fuse.bom.version>
 
         <jaeger.version>0.31.0</jaeger.version>
 
@@ -30,16 +29,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.camel</groupId>
-                <artifactId>camel-spring-boot-dependencies</artifactId>
-                <version>${camel.version}</version>
+                <groupId>org.jboss.redhat-fuse</groupId>
+                <artifactId>fuse-springboot-bom</artifactId>
+                <version>${fuse.bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -151,4 +143,26 @@
         <module>greetings-service</module>
         <module>itest</module>
     </modules>
+
+    <profiles>
+        <profile>
+            <id>openshift</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jboss.redhat-fuse</groupId>
+                        <artifactId>fabric8-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>resource</goal>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
