--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
-        <camel.version>2.21.2</camel.version>
-
         <fuse.bom.version>7.1.0.fuse-710019-redhat-00002</fuse.bom.version>
 
         <jaeger.version>0.31.0</jaeger.version>
@@ -56,7 +53,7 @@
                 <plugin>
                     <groupId>io.fabric8</groupId>
                     <artifactId>fabric8-maven-plugin</artifactId>
-                    <version>${fmp.version}</version>
+                    <version>${fuse.bom.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -87,7 +84,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${fuse.bom.version}</version>
             </plugin>
         </plugins>
     </build>
