--- a/greetings-service/pom.xml
+++ b/greetings-service/pom.xml
@@ -113,7 +113,7 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>io.fabric8</groupId>
+                        <groupId>org.jboss.redhat-fuse</groupId>
                         <artifactId>fabric8-maven-plugin</artifactId>
                         <executions>
                             <execution>
