--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring-boot.version>1.5.13.RELEASE</spring-boot.version>
-        <camel.version>2.21.2</camel.version>
-
         <fuse.bom.version>7.1.0.fuse-710019-redhat-00002</fuse.bom.version>
 
         <jaeger.version>0.31.0</jaeger.version>
@@ -54,9 +51,9 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>io.fabric8</groupId>
+                    <groupId>org.jboss.redhat-fuse</groupId>
                     <artifactId>fabric8-maven-plugin</artifactId>
-                    <version>${fmp.version}</version>
+                    <version>${fuse.bom.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -85,9 +82,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
+                <groupId>org.jboss.redhat-fuse</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${fuse.bom.version}</version>
             </plugin>
         </plugins>
     </build>
@@ -143,26 +140,4 @@
         <module>greetings-service</module>
         <module>itest</module>
     </modules>
-
-    <profiles>
-        <profile>
-            <id>openshift</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jboss.redhat-fuse</groupId>
-                        <artifactId>fabric8-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>resource</goal>
-                                    <goal>build</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
