--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${fuse.bom.version}</version>
             </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>${fmp.version}</version>
+            </plugin>        
         </plugins>
     </build>
 
