--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>fabric8-maven-plugin</artifactId>
-                <version>${fmp.version}</version>
+                <version>${fuse.bom.version}</version>
             </plugin>        
         </plugins>
     </build>
