--- a/istio/greetings-gateway.yaml
+++ b/istio/greetings-gateway.yaml
@@ -31,3 +31,22 @@ spec:
         host: greetings-service
         port:
           number: 8080
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: name-virtual-service
+spec:
+  hosts:
+  - '*'
+  gateways:
+  - greetings-gateway
+  http:
+  - match:
+    - uri:
+        prefix: /camel/name
+    route:
+    - destination:
+        host: name-service
+        port:
+          number: 8080
