Initial adaptation to sb2

--- a/greetings-service/src/main/resources/application.properties
+++ b/greetings-service/src/main/resources/application.properties
@@ -5,9 +5,7 @@ nameService.port=8081
 
 jaeger.reporter.endpoint=
 
-# disable all management enpoints except health
-endpoints.enabled = false
-endpoints.health.enabled = true
+# disable health defaults
 management.health.defaults.enabled=false
 
 camel.health.enabled=false
