--- a/name-service/src/main/resources/application.properties
+++ b/name-service/src/main/resources/application.properties
@@ -2,9 +2,7 @@ server.port=8080
 
 jaeger.reporter.endpoint=
 
-# disable all management enpoints except health
-endpoints.enabled = false
-endpoints.health.enabled = true
+# disable health defaults
 management.health.defaults.enabled=false
 
 camel.health.enabled=false
