--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 <!--        <fuse.bom.version>7.3.1.fuse-731003-redhat-00003</fuse.bom.version>-->
-        <fuse.bom.version>7.4.0-SNAPSHOT</fuse.bom.version>
+        <fuse.bom.version>7.4.0.fuse-sb2-740019-redhat-00005</fuse.bom.version>
 
 
         <jaeger.version>0.31.0</jaeger.version>
