--- a/name-service/.openshiftio/application.yaml
+++ b/name-service/.openshiftio/application.yaml
@@ -48,15 +48,15 @@ objects:
   data:
     application.properties: |-
       server.port=8080
-      nameService.host=${NAME_SERVICE_SERVICE_HOST}
-      nameService.port=${NAME_SERVICE_SERVICE_PORT}
-      # disable all management enpoints except health
-      endpoints.enabled = false
-      endpoints.health.enabled = true
+      management.endpoints.web.base-path=/
+
+      jaeger.reporter.endpoint=http://jaeger-collector.istio-system.svc:14268/api/traces
+
+      # disable health defaults
       management.health.defaults.enabled=false
+
       camel.health.enabled=false
       camel.health.indicator.enabled=true
-      jaeger.reporter.endpoint=http://jaeger-collector.istio-system.svc:14268/api/traces
 - apiVersion: v1
   kind: ImageStream
   metadata:
@@ -192,7 +192,7 @@ objects:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 180
@@ -213,7 +213,7 @@ objects:
             protocol: TCP
           readinessProbe:
             httpGet:
-              path: /actuator/health
+              path: /health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 10
