ENTESB-12212: [SB2] Configmap booster is using different health check then other boosters

--- a/greetings-service/.openshiftio/application.yaml
+++ b/greetings-service/.openshiftio/application.yaml
@@ -48,7 +48,6 @@ objects:
   data:
     application.properties: |-
       server.port=8080
-      management.endpoints.web.base-path=/
 
       nameService.host=${NAME_SERVICE_SERVICE_HOST}
       nameService.port=${NAME_SERVICE_SERVICE_PORT}
@@ -195,7 +194,7 @@ objects:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 180
@@ -216,7 +215,7 @@ objects:
             protocol: TCP
           readinessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 10
