--- a/name-service/.openshiftio/application.yaml
+++ b/name-service/.openshiftio/application.yaml
@@ -48,7 +48,6 @@ objects:
   data:
     application.properties: |-
       server.port=8080
-      management.endpoints.web.base-path=/
 
       jaeger.reporter.endpoint=http://jaeger-collector.istio-system.svc:14268/api/traces
 
@@ -192,7 +191,7 @@ objects:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 180
@@ -213,7 +212,7 @@ objects:
             protocol: TCP
           readinessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 10
