Change artifact names of services to avoid conflict with fuse-circuit-breaker-booster artifacts in prod

--- a/greetings-service/pom.xml
+++ b/greetings-service/pom.xml
@@ -9,9 +9,9 @@
         <version>7.0.0.redhat-SNAPSHOT</version>
     </parent>
 
-    <artifactId>greetings-service</artifactId>
+    <artifactId>tracing-greetings-service</artifactId>
 
-    <name>Fuse :: Boosters :: Istio :: Distributed tracing :: Greetings service</name>
+    <name>Fuse :: Boosters :: Istio :: Distributed tracing :: Tracing Greetings service</name>
 
     <properties>
 
