Migrate from FMP to JKube

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <camel.version>2.21.2</camel.version>
 
         <!-- versions of Maven plugins -->
-        <fmp.version>4.3.1</fmp.version>
+        <jkube.version>1.1.1</jkube.version>
 
         <jaeger.version>0.31.0</jaeger.version>
 
@@ -62,9 +62,9 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>io.fabric8</groupId>
-                    <artifactId>fabric8-maven-plugin</artifactId>
-                    <version>${fmp.version}</version>
+                    <groupId>org.eclipse.jkube</groupId>
+                    <artifactId>openshift-maven-plugin</artifactId>
+                    <version>${jkube.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -98,9 +98,9 @@
                 <version>${spring-boot.version}</version>
             </plugin>
             <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>fabric8-maven-plugin</artifactId>
-                <version>${fmp.version}</version>
+                <groupId>org.eclipse.jkube</groupId>
+                <artifactId>openshift-maven-plugin</artifactId>
+                <version>${jkube.version}</version>
             </plugin>        
         </plugins>
     </build>
