ENTESB-17165 Commit mcarletti patch to istio booster that fixes maven artifact ids, jkube/fabric8 resources labels, added env variables, and removes the triggers

--- a/greetings-service/pom.xml
+++ b/greetings-service/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.redhat.fuse.boosters</groupId>
+        <groupId>com.redhat.fuse.boosters.tracing</groupId>
         <artifactId>fuse-istio-distributed-tracing-booster-parent</artifactId>
         <version>7.0.0.redhat-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tracing-greetings-service</artifactId>
+    <artifactId>greetings-service</artifactId>
 
     <name>Fuse :: Boosters :: Istio :: Distributed tracing :: Tracing Greetings service</name>
 
