--- a/name-service/pom.xml
+++ b/name-service/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.redhat.fuse.boosters</groupId>
+        <groupId>com.redhat.fuse.boosters.tracing</groupId>
         <artifactId>fuse-istio-distributed-tracing-booster-parent</artifactId>
         <version>7.0.0.redhat-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tracing-name-service</artifactId>
+    <artifactId>name-service</artifactId>
 
     <name>Fuse :: Boosters :: Istio :: Distributed tracing :: Tracing Name service</name>
 
