--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.redhat.fuse.boosters.tracing</groupId>
     <artifactId>fuse-istio-distributed-tracing-booster-parent</artifactId>
-    <version>7.0.0.fuse-7_12_0-00015</version>
+    <version>7.0.0.redhat-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Fuse :: Boosters :: Istio :: Distributed tracing</name>
